# decorate_on_stdout

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: code_test.yml  create-release.yml
decorate_on_stdout/: __init__.py  decorate.py  multiline.py
stdoutdeco/: __init__.py  __init__.pyi  decorate.py  decorate.pyi  multiline.py  multiline.pyi
test/: decorate.py  test_decorate.py
