[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decorate_on_stdout"
version = "0.1.0"
authors = [
    {name = "Mijinko_SD"}
]
description = "Support text decoration when outputting to stdout."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/MijinkoSD/decorate_on_stdout"

[project.scripts]
decorate_on_stdout = "src.decorate"
