[metadata]
name = decorate_on_stdout
version = attr: decorate_on_stdout.__version__
author = decorate_on_stdout.__author__
description = Support text decoration when outputting to stdout.
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = >=3.7
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
readme = README.md
url = https://github.com/MijinkoSD/decorate_on_stdout

[options]
packages = find:

