[metadata]
name = stdoutdeco
version = attr: stdoutdeco.__version__
author = stdoutdeco.__author__
description = Support text decoration when outputting to stdout.
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = >=3.10
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
readme = README.md
url = https://github.com/MijinkoSD/stdoutdeco

[options]
packages = find:

